--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
-@import "tailwindcss" source("../");
+@import "tailwindcss";
 @import "tw-animate-css";
+
+@source "../"
 
 @custom-variant dark (&:is(.dark *));
 
