--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,8 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
-@import "tailwindcss";
+@import "tailwindcss" source("../");
 @import "tw-animate-css";
-
-@source "../"
 
 @custom-variant dark (&:is(.dark *));
 
