--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -13,7 +13,7 @@
   --card-foreground: oklch(0.20 0 0);
   --popover: oklch(0.99 0 0);
   --popover-foreground: oklch(0.44 0 0);
-  --primary: oklch(0.83 0.13 160.91);
+  --primary: oklch(0.5566 0.139955 244.9518);
   --primary-foreground: oklch(0.26 0.01 166.46);
   --secondary: oklch(0.99 0 0);
   --secondary-foreground: oklch(0.20 0 0);
@@ -34,7 +34,7 @@
   --sidebar: oklch(0.99 0 0);
   --sidebar-foreground: oklch(0.55 0 0);
   --sidebar-primary: oklch(0.83 0.13 160.91);
-  --sidebar-primary-foreground: oklch(0.26 0.01 166.46);
+  --sidebar-primary-foreground: oklch(1 0 0);
   --sidebar-accent: oklch(0.95 0 0);
   --sidebar-accent-foreground: oklch(0.24 0 0);
   --sidebar-border: oklch(0.90 0 0);
@@ -51,7 +51,7 @@
   --shadow-md: 0px 1px 3px 0px hsl(0 0% 0% / 0.17), 0px 2px 4px -1px hsl(0 0% 0% / 0.17);
   --shadow-lg: 0px 1px 3px 0px hsl(0 0% 0% / 0.17), 0px 4px 6px -1px hsl(0 0% 0% / 0.17);
   --shadow-xl: 0px 1px 3px 0px hsl(0 0% 0% / 0.17), 0px 8px 10px -1px hsl(0 0% 0% / 0.17);
-  --shadow-2xl: 0px 1px 3px 0px hsl(0 0% 0% / 0.43);
+  --shadow-2xl: 0px 1px 3px 0px hsla(0, 24%, 40%, 0.43);
   --tracking-normal: 0.025em;
 }
 
@@ -62,7 +62,7 @@
   --card-foreground: oklch(0.93 0.01 255.51);
   --popover: oklch(0.26 0 0);
   --popover-foreground: oklch(0.73 0 0);
-  --primary: oklch(0.44 0.10 156.76);
+  --primary: oklch(0.5566 0.139955 244.9518);
   --primary-foreground: oklch(0.92 0.01 167.16);
   --secondary: oklch(0.26 0 0);
   --secondary-foreground: oklch(0.99 0 0);
