--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap');
 @import "tailwindcss" source("../");
 @import "tw-animate-css";
 
@@ -40,6 +41,7 @@
   --sidebar-border: oklch(0.90 0 0);
   --sidebar-ring: oklch(0.83 0.13 160.91);
   --font-sans: Inter, sans-serif;
+  --font-geist: "Geist", sans-serif;
   --font-mont: "Montserrat", sans-serif;
   --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
   --font-mono: monospace;
@@ -89,6 +91,7 @@
   --sidebar-border: oklch(0.28 0 0);
   --sidebar-ring: oklch(0.80 0.18 151.71);
   --font-sans: Inter, sans-serif;
+  --font-geist: "Geist", sans-serif;
   --font-mont: "Montserrat", sans-serif;
   --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
   --font-mono: monospace;
@@ -139,6 +142,7 @@
 
   --font-sans: var(--font-sans);
   --font-mont : var(--font-mont);
+  --font-geist: var(--font-geist);
   --font-mono: var(--font-mono);
   --font-serif: var(--font-serif);
 
