--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -13,7 +13,7 @@
 :root {
   --background: oklch(0.99 0 0);
   --foreground: oklch(0.20 0 0);
-  --card: oklch(0.99 0 0);
+  --card: oklch(97.315% 0.00011 271.152);
   --card-foreground: oklch(0.20 0 0);
   --popover: oklch(0.99 0 0);
   --popover-foreground: oklch(0.44 0 0);
@@ -64,7 +64,7 @@
 .dark {
   --background: oklch(0.18 0 0);
   --foreground: oklch(0.93 0.01 255.51);
-  --card: oklch(0.20 0 0);
+  --card: oklch(21.342% 0.00002 271.152);
   --card-foreground: oklch(0.93 0.01 255.51);
   --popover: oklch(0.26 0 0);
   --popover-foreground: oklch(0.73 0 0);
