--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -35,6 +35,7 @@
   --chart-3: oklch(0.61 0.22 292.72);
   --chart-4: oklch(0.77 0.16 70.08);
   --chart-5: oklch(0.70 0.15 162.48);
+  --chart-6: oklch(0.637 0.237 25.331);
   --sidebar: oklch(0.99 0 0);
   --sidebar-foreground: oklch(0.55 0 0);
   --sidebar-primary: oklch(0.83 0.13 160.91);
@@ -86,6 +87,7 @@
   --chart-3: oklch(0.71 0.16 293.54);
   --chart-4: oklch(0.84 0.16 84.43);
   --chart-5: oklch(0.78 0.13 181.91);
+  --chart-6: oklch(0.637 0.237 25.331);
   --sidebar: oklch(0.18 0 0);
   --sidebar-foreground: oklch(0.63 0 0);
   --sidebar-primary: oklch(0.44 0.10 156.76);
