change primary color

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -17,7 +17,7 @@
   --card-foreground: oklch(0.20 0 0);
   --popover: oklch(0.99 0 0);
   --popover-foreground: oklch(0.44 0 0);
-  --primary: oklch(0.5566 0.139955 244.9518);
+  --primary: oklch(0.4963 0.2218 261.93);
   --primary-foreground: oklch(0.26 0.01 166.46);
   --secondary: oklch(0.99 0 0);
   --secondary-foreground: oklch(0.20 0 0);
@@ -69,7 +69,7 @@
   --card-foreground: oklch(0.93 0.01 255.51);
   --popover: oklch(0.26 0 0);
   --popover-foreground: oklch(0.73 0 0);
-  --primary: oklch(0.5566 0.139955 244.9518);
+  --primary: oklch(47.201% 0.20223 261.885);
   --primary-foreground: oklch(0.92 0.01 167.16);
   --secondary: oklch(0.26 0 0);
   --secondary-foreground: oklch(0.99 0 0);
