change default font

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -181,7 +181,7 @@
 @layer base {
   * {
     border-color: var(--border);
-    font-family: var(--font-sans);
+    font-family: var(--font-geist);
   }
   body {
     background-color: var(--background);
