feat: new stat card design with delta indicator

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -18,6 +18,7 @@
   --popover: oklch(0.99 0 0);
   --popover-foreground: oklch(0.44 0 0);
   --primary: oklch(0.4963 0.2218 261.93);
+  --success: oklch(0.70 0.15 162.48);
   --primary-foreground: oklch(0.26 0.01 166.46);
   --secondary: oklch(0.99 0 0);
   --secondary-foreground: oklch(0.20 0 0);
@@ -70,6 +71,7 @@
   --popover: oklch(0.26 0 0);
   --popover-foreground: oklch(0.73 0 0);
   --primary: oklch(47.201% 0.20223 261.885);
+  --success: oklch(0.70 0.15 162.48);
   --primary-foreground: oklch(0.92 0.01 167.16);
   --secondary: oklch(0.26 0 0);
   --secondary-foreground: oklch(0.99 0 0);
