--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -19,7 +19,7 @@
   --popover-foreground: oklch(0.44 0 0);
   --primary: oklch(0.4963 0.2218 261.93);
   --success: oklch(0.70 0.15 162.48);
-  --primary-foreground: oklch(0.26 0.01 166.46);
+  --primary-foreground: oklch(100% 0.00011 271.152);
   --secondary: oklch(0.99 0 0);
   --secondary-foreground: oklch(0.20 0 0);
   --muted: oklch(0.95 0 0);
