--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -27,8 +27,7 @@
   --muted-foreground: oklch(0.24 0 0);
   --accent: oklch(0.95 0 0);
   --accent-foreground: oklch(0.24 0 0);
-  --destructive: oklch(0.55 0.19 32.73);
-  --destructive-foreground: oklch(0.99 0.00 17.21);
+  --destructive: oklch(92.612% 0.01868 21.279);
   --border: oklch(0.90 0 0);
   --input: oklch(0.97 0 0);
   --ring: oklch(0.83 0.13 160.91);
@@ -80,8 +79,7 @@
   --muted-foreground: oklch(0.71 0 0);
   --accent: oklch(0.31 0 0);
   --accent-foreground: oklch(0.99 0 0);
-  --destructive: oklch(0.31 0.09 29.79);
-  --destructive-foreground: oklch(0.94 0.00 34.31);
+  --destructive: oklch(34.417% 0.09776 30.472);
   --border: oklch(0.28 0 0);
   --input: oklch(0.26 0 0);
   --ring: oklch(0.80 0.18 151.71);
