--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -9,6 +9,8 @@
 @import "tw-animate-css";
 
 @custom-variant dark (&:is(.dark *));
+@custom-variant light (&:is(.light *));
+@custom-variant system (&:is(.system *));
 
 
 :root {
